--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-<h2>Hello bhoj</h2>
+
+<div>
+    <%= image_tag "bgimage.jpg" %>
+</div>
