--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -5,7 +5,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: blue;
+    background-color: rgb(121, 3, 255);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     position: sticky;
