--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
 
 <div class="navbar">
     <div class="navbar-brand">
-     <%= link_to image_tag("bus.png", alt: "logo", style: "width:45px;"), home_index_path %>
+     <%= link_to image_tag("tablet.png", alt: "logo", style: "width:55px;"), home_index_path %>
     </div>
 
     <div class="navbar-links">
