--- a/app/assets/stylesheets/devise_custom.css
+++ b/app/assets/stylesheets/devise_custom.css
@@ -43,3 +43,20 @@
 .button:hover {
   background-color: #0056b3; /* Darker shade for hover */
 }
+
+#sign-up-btn,
+#log-in-btn {
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+#sign-up-btn:hover,
+#log-in-btn:hover {
+  background-color: #0056b3;
+}
