--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,6 @@
+<div class="login-page">
+<div class="login-container">
+
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -22,8 +25,10 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+  <%= f.submit "Sign up", id: "sign-up-btn" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+</div>
