--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,11 +1,13 @@
 <%- if controller_name != 'sessions' %>
   <div class="button-container">
+  Already have an account with us? 
     <%= link_to "Log in", new_session_path(resource_name), class: "button" %>
   </div>
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
   <div class="button-container">
+  New to our site? 
     <%= link_to "Sign up", new_registration_path(resource_name), class: "button" %>
   </div>
 <% end %>
