--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,6 +27,7 @@
   <div class="actions">
   <%= f.submit "Sign up", id: "sign-up-btn" %>
   </div>
+    <%= recaptcha_tags %> 
 <% end %>
 
 <%= render "devise/shared/links" %>
