--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,19 @@
-
 <%= stylesheet_link_tag "home" %>
+
 <section class="landing_page">
-      <%= image_tag "bgimage.jpg", class:"bg-image" %>
-  <div class="hero-content">
-     <h1 class="hero-text">I want to visit</h1>
+  <!-- Hero content and Explore subtitle -->
+  <div class="content-wrapper">
+    <div class="hero-content">
+      <h1 class="hero-text">I want to visit</h1>
       <input type="text" id="visit-place" placeholder="Enter the location tags you want to visit">
-        <h1 class="hero-text1">and meet</h1>
+      <h1 class="hero-text1">and meet</h1>
+      <input type="text" id="meet-person" placeholder="Enter the person you want to meet">
+      <%= button_to "New", "#", class: "button" %>
+    </div>
 
-     <input type="text" id="meet-person" placeholder="Enter the person you want to meet">
-
-      <%= button_to "New", "#", class:"button" %>
+    <!-- Subtitle section -->
+    <div class="explore-subtitle">
+      <h2>Explore Authentic Stays in Emerging Destinations</h2>
+    </div>
   </div>
 </section>
