Better navbar with tags

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,23 +1,24 @@
 <%= stylesheet_link_tag "navbar" %>
 
 <div class="navbar">
-    <div class="navbar-brand">
-     <%= link_to image_tag("tablet.png", alt: "logo", style: "width:55px;"), home_index_path %>
-    </div>
+  <div class="navbar-brand">
+    <%= link_to image_tag("tablet.png", alt: "logo", style: "width:55px;"), home_index_path %>
+  </div>
 
-    <div class="navbar-links">
-      <% if user_signed_in? %>
-          <div class="navbar-user">
-            <%= link_to "My account", edit_user_registration_path, class: "nav-link"%>
-            <%= link_to "Sign out", destroy_user_session_path, class: "nav-link", style:"border:none;"  %>
-          </div>
-       <%else%>
-          <div class="navbar-auth">
-            <%= link_to "Sign up", new_user_registration_path, class: "nav-link"%>
-            <%= link_to "Log in", new_user_session_path, class: "nav-link" %>
-          </div>
-       <% end %>
-    </div>
+  <div class="navbar-links">
+    <% if user_signed_in? %>
+      <!-- Add the Tags link for signed-in users -->
+      <%= link_to "Tags", tags_path, class: "nav-link" %>
+
+      <div class="navbar-user">
+        <%= link_to "My account", edit_user_registration_path, class: "nav-link"%>
+        <%= link_to "Sign out", destroy_user_session_path, class: "nav-link", style:"border:none;" %>
+      </div>
+    <% else %>
+      <div class="navbar-auth">
+        <%= link_to "Sign up", new_user_registration_path, class: "nav-link"%>
+        <%= link_to "Log in", new_user_session_path, class: "nav-link" %>
+      </div>
+    <% end %>
+  </div>
 </div>
-
-
