--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -1,7 +1,8 @@
-body{
+body {
     margin: 0;
-}
-.navbar{
+  }
+  
+  .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -11,16 +12,23 @@ body{
     position: sticky;
     top: 0;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-}
-.navbar-brand{
+  }
+  
+  .navbar-brand {
     margin-right: auto;
-}
-.navbar-links{
+  }
+  
+  .navbar-links {
     display: flex;
     align-items: center;
-}
-.nav-link{
+  }
+  
+  .nav-link {
     color: aliceblue;
     text-decoration: none;
     margin: 0 24px;
-}
+  }
+  
+  .nav-link:hover {
+    text-decoration: underline;
+  }
