no navbar or footer in sign up and sign in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,12 @@
   </head>
 
   <body>
-    <%= render "layouts/navbar" %>
+
+
+    <% unless  current_page?(new_user_session_path) || current_page?(new_user_registration_path) %>
+      <%= render "layouts/navbar" %>
+    <% end %>
+
     
     <div class="flash-messages">
       <% if notice.present? %>
@@ -34,6 +39,9 @@
 
     <%= yield %>
 
-    <%= render 'layouts/footer' %>
+    
+     <% unless  current_page?(new_user_session_path) || current_page?(new_user_registration_path) %>
+      <%= render 'layouts/footer' %>
+    <% end %>
   </body>
 </html>
