--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,24 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="flex h-screen">
+  <div class="w-1/3 bg-gray-800 flex items-center justify-center text-white text-4xl font-bold">
+    Forgot your password?
   </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+  <div class="w-2/3 bg-gray-200 p-8 flex items-center justify-center">
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= render "devise/shared/links" %>
+      <div class="mb-4">
+        <%= f.label :email, class: "block text-gray-700 font-bold mb-2" %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "block w-full px-3 py-2 bg-white border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+      </div>
+
+      <div class="text-center">
+        <%= f.submit "Send me reset password instructions", class: "w-full py-2 px-4 bg-blue-500 hover:bg-blue-600 text-white font-bold rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+      </div>
+
+    <div class="mt-4 text-center text-gray-500">
+      <%= render "devise/shared/links" %>
+    </div>
+    <% end %>
+  </div>
+</div>
