--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,40 +1,42 @@
-<div class="login-page">
-<div class="login-container">
-
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="flex h-screen">
+  <div class="w-1/3 bg-gray-800 flex items-center justify-center text-white text-4xl font-bold">
+    SIGN UP
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+  <div class="w-2/3 bg-gray-200 p-8 flex items-center justify-center">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+      <div class="mb-4">
+        <%= f.label :username, class: "block text-gray-700 font-bold mb-2" %>
+        <%= f.text_field :username, autofocus: true, class: "block w-full px-3 py-2 bg-white border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+      </div>
 
-  <div class="actions">
-  <%= f.submit "Sign up", id: "sign-up-btn" %>
-  </div>
-    
-<% end %>
+      <div class="mb-4">
+        <%= f.label :email, class: "block text-gray-700 font-bold mb-2" %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "block w-full px-3 py-2 bg-white border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+      </div>
 
-<%= render "devise/shared/links" %>
-</div>
+      <div class="mb-4">
+        <%= f.label :password, class: "block text-gray-700 font-bold mb-2" %>
+        <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %>
+        <%= f.password_field :password, autocomplete: "new-password", class: "block w-full px-3 py-2 bg-white border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+      </div>
+
+      <div class="mb-4">
+        <%= f.label :password_confirmation, class: "block text-gray-700 font-bold mb-2" %>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "block w-full px-3 py-2 bg-white border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+      </div>
+
+      <div class="text-center">
+        <%= f.submit "Sign up", id: "sign-up-btn", class: "w-full py-2 px-4 bg-blue-500 hover:bg-blue-600 text-white font-bold rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+      </div>
+
+    <div class="text-center text-gray-500">
+      <%= render "devise/shared/links" %>
+    </div>
+    <% end %>
+  </div>
 </div>
