--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,31 +1,41 @@
 <%- if controller_name != 'sessions' %>
-  <div class="button-container">
-  Already have an account with us? 
-    <%= link_to "Log in", new_session_path(resource_name), class: "button" %>
+  <div class="button-container flex justify-center">
+    <p class="text-gray-600 mr-2">Already have an account with us?</p>
+    <%= link_to "Log in", new_session_path(resource_name), class: "text-blue-500 hover:text-blue-700 underline" %>
   </div>
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <div class="button-container">
-  New to our site? 
-    <%= link_to "Sign up", new_registration_path(resource_name), class: "button" %>
+  <div class="button-container flex justify-center">
+    <p class="text-gray-600 mr-2">New to our site?</p>
+    <%= link_to "Sign up", new_registration_path(resource_name), class: "text-blue-500 hover:text-blue-700 underline" %>
   </div>
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+  <p class="text-center text-gray-500">
+    <%= link_to "Forgot your password?", new_password_path(resource_name), class: "hover:underline" %>
+  </p>
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %><br />
+  <p class="text-center text-gray-500">
+    <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name), class: "hover:underline" %>
+  </p>
 <% end %>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
+  <p class="text-center text-gray-500">
+    <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name), class: "hover:underline" %>
+  </p>
 <% end %>
 
 <%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), data: { turbo: false } %><br />
-  <% end %>
+  <div class="flex justify-center">
+    <%- resource_class.omniauth_providers.each do |provider| %>
+      <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), class: "bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600", data: { turbo: false } %><br />
+    <% end %>
+  </div>
 <% end %>
+
+<%= link_to "Go to Home Page", root_path %>
