--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,12 @@
-<footer class="bg-gray-800 text-white py-8 mt-auto">
+<footer class="bg-black text-white py-8 mt-auto">
   <div class="container mx-auto px-4">
     <div class="md:flex md:justify-between md:gap-8 space-y-8 md:space-y-0">
       <!-- Logo and Newsletter -->
       <div class="md:w-1/4">
-        <img src="path/to/your/logo.png" alt="Logo" class="h-12 mb-4" />
+        <!--
+        <img src="path/to/your/logo.png" alt="Logo" class="h-12 mb-4" /> 
+        -->
+        <%= image_tag("logo-bg-dark.png", alt: "Logo", class: "h-12 mb-4") %>
         <h4 class="text-lg font-semibold mb-4">Subscribe to our Newsletter</h4>
         <form class="flex flex-col space-y-4">
           <input type="email" placeholder="Enter your email" required class="p-2 rounded-md text-gray-800" />
