--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,10 +1,10 @@
-<nav class="bg-neutral-100 shadow-lg">
+<nav class="bg-white-100 shadow-lg">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex justify-between items-center h-16">
       <!-- Navbar Brand / Logo -->
       <div class="flex-shrink-0">
         <%= link_to home_index_path do %>
-          <%= image_tag("tablet.png", alt: "logo", class: "h-12 w-auto") %>
+          <%= image_tag("logo-bg-light.png", alt: "logo", class: "h-16 w-auto") %>
         <% end %>
       </div>
 
@@ -14,9 +14,11 @@
           <!-- Tags link -->
           <%= link_to "Tags", tags_path, class: "text-gray-700 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium" %>
 
+
           <!-- Account and Sign Out links -->
           <div class="flex space-x-4 items-center">
             <%= link_to "My account", edit_user_registration_path, class: "text-gray-700 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium" %>
+            <%= link_to "View Profile", profile_path(current_user.username), class: "text-gray-700 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium" %>
             <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "text-red-500 hover:text-red-700 px-3 py-2 rounded-md text-sm font-medium" %>
           </div>
         <% else %>
