add modal for addings tags. not working

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
     <%= javascript_importmap_tags %>
+    <%= javascript_pack_tag 'profile_tags', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
