Add Bing Meta verification tag.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>VisitmeetV2</title>
+    <meta name="msvalidate.01" content="842B3EF5D666507F03FC98CF9415CCF5" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YZSMFSQDZM"></script>
     <script>
