--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag "home" %>
 <%= javascript_include_tag "autocomplete" %>
 
-<section class="landing_page bg-cover bg-center h-screen" style="background-image: url('/assets/images/bgimage.jpg');">
+<section class="landing_page bg-cover bg-center h-screen" style="background-image: url('<%= asset_path 'bgimage.jpg' %>');">
   <!-- Hero content and Explore subtitle -->
   <div class="content-wrapper flex flex-col items-center justify-center h-full text-white bg-black bg-opacity-50">
     <div class="hero-content text-center">
